--- a/tender.html
+++ b/tender.html
@@ -104,7 +104,7 @@
         listItem.innerHTML = `
           <span class="name">${truncatedName}</span>
           <span class="rate">₹${electrician.rate}/hr</span>
-          <button class="apply-button" onclick="window.location.href='payment.html'">Apply</button>
+          <button class="apply-button" onclick="window.location.href='https://pages.razorpay.com/pl_J9KtTyseVLOLe9/view#'">Apply</button>
         `;
         electricianList.appendChild(listItem);
       });
